# GhostOS

./: .gitignore  LICENSE  README.md  RELEASES.md  _sidebar.md  index.html  pyproject.toml  what_is_ghostos.md
libs/common/: README.md  RELEASES.md  pyproject.toml
libs/common/ghostos_common/helpers/: code_analyser.py  hashes.py  io.py  openai.py
libs/common/src/ghostos_common/: entity.py  identifier.py  prompter.py
libs/common/src/ghostos_common/helpers/: __init__.py  code_analyser.py  dictionary.py  files.py  modules.py  timeutils.py  trans.py  tree_sitter.py  yaml.py
libs/common/tests/: test_entity.py  test_prompter.py
libs/common/tests/helpers/: test_code_analyser.py  test_files_helpers.py  test_get_interface.py  test_helpers.py  test_modules_helper.py  test_timeleft.py  test_tree_sitter.py
libs/container/: .gitignore  README.md  RELEASES.md  pyproject.toml
libs/container/ghostos_container/: __init__.py
libs/container/src/: ghostos_container.py
libs/container/tests/: test_container.py
libs/ghostos/: .gitignore  README.md  RELEASES.md  pyproject.toml
libs/ghostos/ghostos/: __init__.py  bootstrap.py  streamlit.py
libs/ghostos/ghostos/abcd/: __init__.py  concepts.py  moss_action.py  realtime.py  thoughts.py  utils.py
libs/ghostos/ghostos/actions/: module_editor.py
libs/ghostos/ghostos/app/.streamlit/: config.toml
libs/ghostos/ghostos/app/configs/: ghostos_conf.yml
libs/ghostos/ghostos/contracts/: cache.py  configs.py  documents.py  logger.py  modules.py  pool.py  storage.py  workspace.py
libs/ghostos/ghostos/core/aifunc/: __init__.py  driver.py  executor.py  func.py  interfaces.py  repository.py
libs/ghostos/ghostos/core/llms/: __init__.py  abcd.py  configs.py  prompt.py
libs/ghostos/ghostos/core/messages/: functional_tokens.py  message.py  message_classes.py  openai.py  payload.py  transport.py
libs/ghostos/ghostos/core/model_funcs/: llms_model_funcs.py  truncate_threads.py
libs/ghostos/ghostos/core/models/: audio_generation.py  embedding.py  speech_to_text.py
libs/ghostos/ghostos/core/runtime/: events.py  processes.py  runtime.py  tasks.py  thread_history.py  threads.py
libs/ghostos/ghostos/demo/: aifunc_raw_test.py
libs/ghostos/ghostos/demo/agents/: ghostos_meta.py  jojo.py  translator.py
libs/ghostos/ghostos/demo/aifuncs_demo/: agentic.py  news.py
libs/ghostos/ghostos/demo/moss_libs/: self_updater_moss.py
libs/ghostos/ghostos/demo/os_agents/: terminal_agent.py
libs/ghostos/ghostos/demo/sphero/: bolt_gpt.py  raw_api_test_agent.py
libs/ghostos/ghostos/demo/test_models/: deepseek_chat.py  deepseek_r1.py  deepseek_r1_fc.py  deepseek_reasoner.py  moonshot.py  openai_o1_mini.py  openai_o3_mini.py
libs/ghostos/ghostos/demo/tool_tests/: notebook_agent.py  project_agent.py  py_editor_agent.py  py_inspector_agent.py
libs/ghostos/ghostos/facade/: README.md  __init__.py  _contracts.py  _llms.py  _model_funcs_facade.py
libs/ghostos/ghostos/framework/assets/: workspace_image_provider.py  workspace_provider.py
libs/ghostos/ghostos/framework/audio/: __init__.py
libs/ghostos/ghostos/framework/configs/: storageimpl.py
libs/ghostos/ghostos/framework/documents/: __init__.py  storage_impl.py
libs/ghostos/ghostos/framework/ghostos/: __init__.py  conversation_impl.py  ghostos_impl.py  mindflow_impl.py  session_impl.py  shell_impl.py  subtasks_impl.py
libs/ghostos/ghostos/framework/llms/: __init__.py  lite_llm_driver.py  openai_driver.py  prompt_storage_impl.py  test_case.py
libs/ghostos/ghostos/framework/logger/: named.py
libs/ghostos/ghostos/framework/messages/: __init__.py
libs/ghostos/ghostos/framework/messengers/: defaults.py
libs/ghostos/ghostos/framework/model_compatible/: deepseek_r1_parser.py
libs/ghostos/ghostos/framework/openai_realtime/: driver.py  event_data_objects.py  event_from_client.py  output.py  state_of_client.py
libs/ghostos/ghostos/framework/processes/: __init__.py  storage_processes.py
libs/ghostos/ghostos/framework/realtime/: defaults.py
libs/ghostos/ghostos/framework/storage/: filestorage.py
libs/ghostos/ghostos/framework/tasks/: __init__.py  storage_tasks.py
libs/ghostos/ghostos/framework/threads/: storage_threads.py
libs/ghostos/ghostos/framework/translation/: dict_impl.py
libs/ghostos/ghostos/framework/variables/: __init__.py
libs/ghostos/ghostos/framework/workspaces/: basic.py
libs/ghostos/ghostos/ghosts/: __init__.py
libs/ghostos/ghostos/ghosts/chatbot/: __init__.py  character.py  chatbot.py
libs/ghostos/ghostos/ghosts/moss_agent/: __init__.py  agent.py  for_developer.py  instructions.py
libs/ghostos/ghostos/ghosts/moss_ghost/: __init__.py  impl.py  template.py
libs/ghostos/ghostos/ghosts/project_manager/: __init__.py  project_manager_context.py  project_manager_ghost.py  project_manager_moss.py
libs/ghostos/ghostos/libraries/: README.md
libs/ghostos/ghostos/moss_libs/: self_updater_moss.py
libs/ghostos/ghostos/scripts/: clear.py  copy_workspace.py
libs/ghostos/ghostos/thoughts/: meta_prompt_experiments.py  operator_thoughts.py
libs/ghostos/ghostos/workspace_stub/: .example.env
libs/ghostos/tests/abcd/: test_moss_action.py
libs/ghostos/tests/core/: test_bootstrap.py
libs/ghostos/tests/ghostos/: test_chatbot.py
libs/ghostos/tests/python/: test_bytes.py  test_generic.py  test_inspect.py  test_iterable.py  test_operators.py  test_os.py  test_pkg.py  test_pydantic.py  test_slice.py  test_typed_dict.py  test_typing.py  test_with_statement.py
libs/moss/: README.md  RELEASES.md  pyproject.toml
libs/moss/ghostos_moss/: __init__.py  abcd.py  magics.py  moss_impl.py  prompts.py  testsuite.py  utils.py
libs/moss/ghostos_moss/examples/: baseline.py  suite_example.py  with_exports.py
libs/moss/src/ghostos_moss/: __init__.py  abcd.py  exports.py  lifecycle.py  modules.py  moss_impl.py  prompts.py  pycontext.py  self_updater.py  utils.py
libs/moss/tests/: test_callable.py  test_moss_type.py  test_prompts.py  test_pycontext.py  test_self_updater.py  test_utils.py
libs/moss/tests/examples/: test_baseline.py  test_moss_reflect_imported_typehint.py
(+1264 files in other folders)
