[tool.poetry]
name = "ghostos"
version = "0.1.5"
description = "A framework offers an operating system simulator with a Python Code Interface for AI Agents"
authors = ["zhuming <thirdgerb@gmail.com>", "Nile Zhou <nilezhou123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
Homepage = "https://github.com/ghost-in-moss/GhostOS"
Repository = "https://github.com/ghost-in-moss/GhostOS"
Documentation = "https://ghost-in-moss.github.io/GhostOS/#/en/"
Issues = "https://github.com/ghost-in-moss/GhostOS/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = "^2.7.0"
openai = "^1.19.0"
pyyaml = "^6.0.1"
rich = "^13.7.1"
httpx-socks = "^0.9.1"
datasets = "^2.20.0"
anthropic = "^0.31.2"
sympy = "^1.13.1"
tree-sitter = "0.21.3"
tree-sitter-languages = "^1.10.2"
litellm = "^1.43.18"
prompt-toolkit = "^3.0.47"
arxiv = "^2.1.3"
llama-index-core = "^0.11.9"
llama-index-llms-openai = "^0.2.7"
streamlit = "^1.39.0"
pydantic-settings = "^2.5.2"
streamlit-antd-components = "^0.3.2"
streamlit-react-jsonschema = "^0.1.3"
python-dotenv = "^1.0.1"
babel = "^2.16.0"
websockets = "^13.1"
pysocks = "^1.7.1"
requests = { extras = ["socks"], version = "^2.32.3" }
streamlit-paste-button = "^0.1.2"
pyaudio = { version = "^0.2.14", optional = true }
spherov2 = { version = "^0.12.1", optional = true }
bleak = [
    { version = "^0.22.3", python = ">=3.10,<3.14", optional = true }
]

[tool.poetry.scripts]
ghostos = "ghostos.scripts.cli:main"

[tool.poetry.extras]
realtime = ['pyaudio']
sphero = ["spherov2", "bleak", "pyaudio"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.13.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
