[project]
authors = [
    { name = "zhuming", email = "thirdgerb@gmail.com" },
    { name = "Nile Zhou", email = "nilezhou123@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "ghostos==0.4.0.dev8",
]
requires-python = ">=3.10"
name = "ghostos-monorepo"
version = "0.4.0"
description = "A framework offers an operating system simulator with a Python Code Interface for AI Agents"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ghost-in-moss/GhostOS"
Repository = "https://github.com/ghost-in-moss/GhostOS"
Documentation = "https://ghost-in-moss.github.io/GhostOS/#/en/"
Issues = "https://github.com/ghost-in-moss/GhostOS/issues"

[project.scripts]
ghostos = "ghostos.scripts.cli:main"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.1.1",
    "mypy<2.0.0,>=1.13.0",
]

[tool.uv.sources]
ghostos-container = { workspace = true }
ghostos-common = { workspace = true }
ghostos-moss = { workspace = true }
ghostos = { workspace = true }

[tool.uv.workspace]
members = ["libs/*"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.1.1",
    "mypy<2.0.0,>=1.13.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

