[project]
name = "ghostos-common"
version = "0.3.0"
description = "common library for GhostOS project"
authors = [
    { name = "thirdgerb", email = "thirdgerb@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ghostos-container>=0.2.1",
    "pydantic<3.0.0,>=2.7.0",
    "pyyaml<7.0.0,>=6.0.1",
    "tree-sitter<=0.24.0,>=0.23.0",
    "tree-sitter-languages>=1.10.0",
    "tree-sitter-python>=0.23.6",
]

[tool.setuptools]
packages = [
    { include = "src" },
]

[tool.uv.sources]
ghostos-container = { workspace = true }

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
