[project]
name = "ghostos-moss"
version = "0.1.4"
description = "the code-driven python interface for llms, agents and project GhostOS"
authors = [
    {name = "thirdgerb",email = "thirdgerb@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ghostos-common (>=0.1.0,<0.2.0)",
    "ghostos-container (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
