[project]
name = "ghostos-moss"
version = "0.2.0"
description = "the code-driven python interface for llms, agents and project GhostOS"
authors = [
    { name = "thirdgerb", email = "thirdgerb@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ghostos-common>=0.2.1",
    "ghostos-container>=0.2.1",
]

[tool.setuptools]
packages = [
    { include = "src" },
]

[tool.uv.sources]
ghostos-container = { path = "../container" }
ghostos-common = { path = "../common" }


[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
